--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.27.2",
     "@hello-pangea/dnd": "^16.5.0",
-    "@prisma/client": "^5.6.0",
+    "@prisma/client": "latest",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -46,7 +46,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
-    "prisma": "^5.6.0",
+    "prisma": "latest",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
