--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-config-next": "14.0.3",
     "postcss": "^8",
     "prisma": "latest",
+    "prisma-dbml-generator": "^0.10.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
