--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.27.2",
+    "@clerk/themes": "^1.7.9",
     "@hello-pangea/dnd": "^16.5.0",
     "@prisma/client": "latest",
     "@radix-ui/react-accordion": "^1.1.2",
@@ -28,6 +29,7 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
     "next": "14.0.3",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "sonner": "^1.2.4",
